# tvl-measurement

./: .gitignore  README.md  pyproject.toml  setup.py  tvl_measurement_review.md
config/: collateral.py  constants.py  json_encoder.py  logger.py  settings.py
diagrams/: .$ana_pip.drawio.bkp  .$ana_pip.drawio.dtmp  .$cdp_lending.drawio.bkp  .$cdp_lending.drawio.dtmp  .$cdp_lending_chain.drawio.bkp  .$complexity.drawio.bkp  .$complexity.drawio.dtmp  .$data_pip.drawio.bkp  .$data_pipeline.drawio.bkp  .$data_pipline.drawio.bkp  .$dex_agg.drawio.bkp  .$dex_agg_chain.drawio.bkp  .$discounting.drawio.bkp  .$discounting.drawio.dtmp  .$financial_leverage.drawio.bkp  .$financial_leverage.drawio.dtmp  .$leverage.drawio.bkp  .$leverage.drawio.dtmp  .$risk_analysis.drawio.bkp  .$risk_analysis.drawio.dtmp  .$risk_price_decline.drawio.bkp  ana_pip.drawio  cdp_lending.drawio  complexity.drawio  data_pip.drawio  data_pipeline.drawio  data_pipline.drawio  dex_agg.drawio  dex_agg_chain.drawio  discounting.drawio  financial_leverage.drawio  leverage.drawio  risk_analysis.drawio  risk_lido_slashing.drawio  risk_price_decline.drawio
environ/data_fetching/: aave_v2_data_fetching.py  balancer_data_fetching.py  compound_v2_data_fetching.py  contract_caller.py  curve_v1_data_fetching.py  fetch_defiexplore.py  fetch_etherscan.py  fetch_fred.py  fetch_llama_tvl.py  fetch_token_category.py  get_block_by_timestamp.py  lido_data_fetching.py  makerdao_data_fetching.py  subgraph_query.py  token_price.py  uniswap_v2_data_fetching.py  uniswap_v3_data_fetching.py  web3_call.py  yearn_data_fetching.py
environ/data_processing/: calculate_tvl.py  defillama_chain_tvl_info.py  preprocess_bal_ptc.py  preprocess_total_tvl.py  preprocess_tvl.py  preprocess_tvl_tvr_pct_change.py  process_bal.py  process_compo.py  process_llama_tvl.py  process_tvl_decompose_sankey.py  protocol_token_origination.py  sum_stats.py
environ/data_visualization/: plot_decomposition.py  plot_pie.py  plot_sankey.py  (+3 more)
scripts/: fetch_compo.py  fetch_compo_price.py  fetch_forward_compo_price.py  fetch_token_lst.py  plot_flow_amount.py  process_compo.py  process_token_lst.py  render_token_cate_tab.py
tables/: Stablecoins_list.tex  bal_Aave V2.tex  bal_AaveV2.tex  bal_Balancer.tex  bal_Compound V2.tex  bal_CompoundV2.tex  bal_Curve V1.tex  bal_CurveV1.tex  bal_MakerDAO.tex  bal_Yearn.tex  corr.tex  governance_tokens_list.tex  logcorr.tex  stablecoins_list.tex  sum_stats.tex  wrapped_tokens_list.tex
test/: game.py  makerdao_bal.csv  plot_dict.csv  sol
(+58 files in other folders)
