[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tvl-measurement"
version = "0.0.1" 
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.12"',
]

from setuptools import setup, find_packages

setup(
    name="environ",
    packages=find_packages(),
    install_requires=[
        "multicall",
        "python-dotenv",
        "pandas",
        "web3",
        "tqdm",
        "requests",
        "plotly",
        "randomcolor",
        "pycoingecko",
        "matplotlib",
        "bs4",
        "plotly",
    ],
    extra_require={"dev": ["pylint", "black"]},
)

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         
    | \.git          
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py       
)
'''